--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Calculator</title>
     <link
       rel="stylesheet"
-      href="./src//style.css"
+      href="style.css"
     />
   </head>
   <body>
@@ -141,6 +141,6 @@
         </div>
       </div>
     </div>
-    <script src="./src/index.js" type="module"></script>
+    <script src="index.js" type="module"></script>
   </body>
 </html>
